--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,11 @@ name = "bdunnette-github-io"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
+    "folium>=0.20.0",
+    "geopandas>=1.1.1",
+    "ipykernel>=6.29.5",
+    "ipywidgets>=8.1.7",
     "jupyter-book>=2.0.0a0",
+    "pandas[compression,excel,html,output-formatting,performance,plot]>=2.3.1",
     "pre-commit>=4.2.0",
 ]
